working at connection in the ftp and in the file manager activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
         <activity android:name=".NewConnection"></activity>
         <activity android:name=".EditConnection"></activity>
+        <activity android:name=".FTPFileManager"></activity>
     </application>
 
 </manifest>
